use process.env and support Zoom

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -33,6 +33,12 @@
           }
         }
       ]
+    },
+    {
+      "type": "func",
+      "command": "host start",
+      "problemMatcher": "$func-watch",
+      "isBackground": true
     }
   ]
 }
